<?xml version="1.0"?>
<package format="2">
  <name>longitudinal_pid</name>
  <version>0.0.1</version>
  <description>Longitudinal PID controller</description>
  <maintainer email="341982@studenti.unimore.it">Matteo Baccilieri</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
